Añade configuración para tests